
Bochs repository moved to the SVN version control !

- CPU
  - Implemented Supervisor Mode Execution Protection (SMEP), the feature can
    be enabled using .bochsrc CPUID option.
  - Added support for XSAVEOPT instruction, the instruction can be enabled
    using .bochsrc CPUID option.
  - Added support for AVX instruction set emulation, to enable configure with
        --enable-avx option.
    When compiled in, AVX still could be disabled using .bochsrc CPUID option.
  - Added emulation of AVX float16 convert instructions, the feature can be
    enabled using .bochsrc CPUID option.
  - Updated/Fixed instrumentation callbacks.
  - Bugfixes for CPU emulation correctness and stability.

- Configure and compile
  - Fixed Bochs manifest for Win64 compilation using Microsoft Visual Studio
    command line compiler.
  - Added ability to configure CPUID family through .bochsrc.
    The default family value determined by configure option --enable-cpu-level.
  - Added ability to configure CPUID model through .bochsrc.
    The default model value is 3.
  - Added ability to configure x2apic support through .bochsrc.
    The APIC configuration could be selected using new CPUID .bochsrc APIC option.
    Possible configurations are: "legacy", "xapic" and "x2apic".
    Configure option --enable-x2apic and Bochs 2.4.6 .bochsrc XAPIC option
    are deprecated and should not be used anymore.
  - Configure option --enable-vbe is deprecated and should not be used anymore.
    The VBE support is always automatically compiled in, in order to enable
    VBE support the bochsrc option "vga: extension=" has to be set to "vbe". If
    PCI is present, the "pcivga" device can be assigned to PCI slot.
  - Configure option --enable-acpi is deprecated and should not be used anymore.
    The ACPI support is always automatically compiled in if PCI is compiled in.
    The ACPI still could be disabled using .bochsrc 'plugin_ctrl' option.